--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/style.css">
   <title>Frontend Mentor | [Blogr]</title>
 
@@ -14,98 +12,114 @@
 
 <body>
 
-        Product
-            Overview
-            Pricing
-            Marketplace
-            Features
-            Integrations
+  <header>
+    <div class="hero">
+      <div class="hero-bar">
+        <div class="hero-logo"><img src="./assets/images/logo.svg" alt=""></div>
+        <div class="hero-menu">
+          <nav>
+            <ul>
+              <li><a href="">Product</a></li>
+              <li><a href="">Company</a></li>
+              <li><a href="">Connect</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="hero-account">
+          <button>Login</button>
+          <button>Sign Up</button>
+        </div>
+      </div>
+      <div class="hero-burger"><img src="./assets/images/icon-hamburger.svg" alt=""></div>
+      <div class="hero-text">
+        <h1>A modern publishing platform</h1>
+        <p>Grow your audience and build your online brand</p>
+      </div>
+      <div class="hero-buttons">
+        <button>Start for Free</button>
+        <button>Learn More</button>
+      </div>
+    </div>
+  </header>
 
+  <main>
+    <div id="intro">
+      <h2>Designed for the future</h2>
+      <div class="intro-1">
+        <h3>Introducing an extensible editor</h3>
+        <p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content.
+          The editor supports management of multiple blogs and allows easy manipulation of embeds such as images,
+          videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or
+          change the looks of a blog.
+        </p>
+      </div>
+      <div class="intro-2">
+        <h3>Robust content management</h3>
+        <p>Flexible content management enables users to easily move through posts. Increase the usability of your blog
+          by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
+        </p>
+      </div>
+    </div>
 
-Company
-            About
-            Team
-            Blog
-                        Careers
-Connect
+    <div id="mobile">
+      <div class="mobile-img"><img src="./assets/images/illustration-phones.svg" alt=""></div>
+      <div class="mobile-text">
+        <h3>State of the Art Infrastructure</h3>
+        <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity.
+          This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
+        </p>
+      </div>
+    </div>
 
-    Contact
-    Newsletter
-    LinkedIn
- 
-     Login
-    Singn Up
+    <div id="laptop">
+      <div class="laptop-img"><img src="./assets/images/illustration-laptop-mobile.svg" alt=""></div>
+      <div class="laptop-1">
+        <h3>Free, open, simple</h3>
+        <p>Blogr is a free and open source application backed by a large community of helpful developers. It supports
+          features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools,
+          and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
+        </p>
+      </div>
+      <div class="laptop-2">
+        <h3>Powerful tooling</h3>
+        <p>Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a
+          breeze,but capable of producing even the most complicated sites.
+        </p>
+      </div>
+    </div>
+  </main>
 
+  <footer>
+    <div class="footer-logo"><img src="./assets/images/logo.svg" alt=""></div>
+    <div class="footer-product">
+      <p>Product</p>
+      <ul>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+      </ul>
+    </div>
+    <div class="footer-company">
+      <p>Company</p>
+      <ul>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+      </ul>
+    </div>
+    <div class="footer-connect">
+      <p>Connect</p>
+      <ul>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li
+      </ul>
+    </div>
+  </footer>
 
-    A modern publishing platform
-    Grow your audience and build your online brand
-
-      <Start for Free
-      Learn More
-      <Designed for the future<
-
-          Introducing an extensible editor
-          Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content.
-            The editor supports management of multiple blogs and allows easy manipulation of embeds such as images,
-            videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or
-            change the looks of a blog.
-            Robust content management
-            Flexible content management enables users to easily move through posts. Increase the usability of your blog
-            by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
-
-      State of the Art Infrastructure
-
-        With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity.
-        This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  Free, open, simple
-  Blogr is a free and open source application backed by a large community of helpful developers. It supports
-  features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools,
-  and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
-
-  Powerful tooling
-  Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze,
-  but
-  capable of producing even the most complicated sites.
-
-  Product
-
-  Overview
-  Pricing
-  Marketplace
-  Features
-  Integrations
-
-  Company
-
-  About
-  Team
-  Blog
-  Careers
-
-  Connect
-
-  Contact
-  Newsletter
-  LinkedIn
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 
 </html>
