css mobile w/o details

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <header>
-    <div class="hero">
+    <div id="hero">
       <div class="hero-bar">
         <div class="hero-logo"><img src="./assets/images/logo.svg" alt=""></div>
         <div class="hero-menu">
@@ -29,8 +29,9 @@
           <button>Login</button>
           <button>Sign Up</button>
         </div>
+        <div class="hero-burger"><img src="./assets/images/icon-hamburger.svg" alt=""></div>
       </div>
-      <div class="hero-burger"><img src="./assets/images/icon-hamburger.svg" alt=""></div>
+
       <div class="hero-text">
         <h1>A modern publishing platform</h1>
         <p>Grow your audience and build your online brand</p>
@@ -45,6 +46,7 @@
   <main>
     <div id="intro">
       <h2>Designed for the future</h2>
+      <div class="intro-img"><img src="./assets/images/illustration-editor-mobile.svg" alt=""></div>
       <div class="intro-1">
         <h3>Introducing an extensible editor</h3>
         <p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content.
@@ -94,29 +96,28 @@
     <div class="footer-product">
       <p>Product</p>
       <ul>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
+        <li><a href="">Overview</a></li>
+        <li><a href="">Pricing</a></li>
+        <li><a href="">Marketplace</a></li>
+        <li><a href="">Features</a></li>
+        <li><a href="">Integrations</a></li>
       </ul>
     </div>
     <div class="footer-company">
       <p>Company</p>
       <ul>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Team</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Careers</a></li>
       </ul>
     </div>
     <div class="footer-connect">
       <p>Connect</p>
       <ul>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li
-      </ul>
+        <li><a href="">Contact</a></li>
+        <li><a href="">Newletter</a></li>
+        <li><a href="">Linkedin</a></li </ul>
     </div>
   </footer>
 
