--- a/index.html
+++ b/index.html
@@ -16,48 +16,57 @@
     <div id="hero">
       <div class="hero-bar">
         <div class="hero-logo"><img src="./assets/images/logo.svg" alt=""></div>
+
+        <input type="checkbox" id="check">
+        <label class="hero-burger" for="check"><img src="./assets/images/icon-hamburger.svg" alt=""></label>
+
         <div class="hero-menu">
           <nav>
-            <ul>
+            <ul class="menu-1">
               <li><a href="">Product</a></li>
               <li><a href="">Company</a></li>
               <li><a href="">Connect</a></li>
             </ul>
+            <ul class="menu-2">
+              <li><a href="">Contact</a></li>
+              <li><a href="">Newsletter</a></li>
+              <li><a href="">Linkedin</a></li>
+            </ul>
           </nav>
+          <div class="menu-3">
+            <button>Login</button>
+            <button>Sign Up</button>
+          </div>
         </div>
-        <div class="hero-account">
-          <button>Login</button>
-          <button>Sign Up</button>
-        </div>
-        <div class="hero-burger"><img src="./assets/images/icon-hamburger.svg" alt=""></div>
+
       </div>
 
       <div class="hero-text">
         <h1>A modern publishing platform</h1>
-        <p>Grow your audience and build your online brand</p>
+        <p class="font-transparent">Grow your audience and build your online brand</p>
       </div>
       <div class="hero-buttons">
-        <button>Start for Free</button>
-        <button>Learn More</button>
+        <button class="font-bold">Start for Free</button>
+        <button class="font-bold">Learn More</button>
       </div>
     </div>
   </header>
 
   <main>
     <div id="intro">
-      <h2>Designed for the future</h2>
+      <h2 class="font-blue">Designed for the future</h2>
       <div class="intro-img"><img src="./assets/images/illustration-editor-mobile.svg" alt=""></div>
       <div class="intro-1">
-        <h3>Introducing an extensible editor</h3>
-        <p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content.
+        <h3 class="font-blue">Introducing an extensible editor</h3>
+        <p class="font-grey-body">Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content.
           The editor supports management of multiple blogs and allows easy manipulation of embeds such as images,
           videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or
           change the looks of a blog.
         </p>
       </div>
       <div class="intro-2">
-        <h3>Robust content management</h3>
-        <p>Flexible content management enables users to easily move through posts. Increase the usability of your blog
+        <h3 class="font-blue">Robust content management</h3>
+        <p class="font-grey-body">Flexible content management enables users to easily move through posts. Increase the usability of your blog
           by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
         </p>
       </div>
@@ -66,7 +75,7 @@
     <div id="mobile">
       <div class="mobile-img"><img src="./assets/images/illustration-phones.svg" alt=""></div>
       <div class="mobile-text">
-        <h3>State of the Art Infrastructure</h3>
+        <h3 class="font-white font-medium">State of the Art Infrastructure</h3>
         <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity.
           This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
         </p>
@@ -76,25 +85,25 @@
     <div id="laptop">
       <div class="laptop-img"><img src="./assets/images/illustration-laptop-mobile.svg" alt=""></div>
       <div class="laptop-1">
-        <h3>Free, open, simple</h3>
-        <p>Blogr is a free and open source application backed by a large community of helpful developers. It supports
+        <h3 class="font-blue">Free, open, simple</h3>
+        <p class="font-grey-body">Blogr is a free and open source application backed by a large community of helpful developers. It supports
           features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools,
           and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
         </p>
       </div>
       <div class="laptop-2">
-        <h3>Powerful tooling</h3>
-        <p>Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a
+        <h3 class="font-blue">Powerful tooling</h3>
+        <p class="font-grey-body">Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a
           breeze,but capable of producing even the most complicated sites.
         </p>
       </div>
     </div>
   </main>
 
-  <footer>
+  <footer class="font-footer-grey">
     <div class="footer-logo"><img src="./assets/images/logo.svg" alt=""></div>
     <div class="footer-product">
-      <p>Product</p>
+      <p class="font-white">Product</p>
       <ul>
         <li><a href="">Overview</a></li>
         <li><a href="">Pricing</a></li>
@@ -104,7 +113,7 @@
       </ul>
     </div>
     <div class="footer-company">
-      <p>Company</p>
+      <p class="font-white">Company</p>
       <ul>
         <li><a href="">About</a></li>
         <li><a href="">Team</a></li>
@@ -113,11 +122,12 @@
       </ul>
     </div>
     <div class="footer-connect">
-      <p>Connect</p>
+      <p class="font-white">Connect</p>
       <ul>
         <li><a href="">Contact</a></li>
         <li><a href="">Newletter</a></li>
-        <li><a href="">Linkedin</a></li </ul>
+        <li><a href="">Linkedin</a></li>
+      </ul>
     </div>
   </footer>
 
