--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
       <div class="intro-img"><img src="./assets/images/illustration-editor-mobile.svg" alt=""></div>
       <div class="intro-1">
         <h3 class="font-blue">Introducing an extensible editor</h3>
-        <p class="font-grey-body">Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content.
+        <p class="font-grey-body">Blogr features an exceedingly intuitive interface which lets you focus on one thing:
+          creating content.
           The editor supports management of multiple blogs and allows easy manipulation of embeds such as images,
           videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or
           change the looks of a blog.
@@ -66,7 +67,8 @@
       </div>
       <div class="intro-2">
         <h3 class="font-blue">Robust content management</h3>
-        <p class="font-grey-body">Flexible content management enables users to easily move through posts. Increase the usability of your blog
+        <p class="font-grey-body">Flexible content management enables users to easily move through posts. Increase the
+          usability of your blog
           by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
         </p>
       </div>
@@ -84,18 +86,24 @@
 
     <div id="laptop">
       <div class="laptop-img"><img src="./assets/images/illustration-laptop-mobile.svg" alt=""></div>
-      <div class="laptop-1">
-        <h3 class="font-blue">Free, open, simple</h3>
-        <p class="font-grey-body">Blogr is a free and open source application backed by a large community of helpful developers. It supports
-          features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools,
-          and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
-        </p>
-      </div>
-      <div class="laptop-2">
-        <h3 class="font-blue">Powerful tooling</h3>
-        <p class="font-grey-body">Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a
-          breeze,but capable of producing even the most complicated sites.
-        </p>
+
+      <div class="laptop-content">
+        <div class="laptop-1">
+          <h3 class="font-blue">Free, open, simple</h3>
+          <p class="font-grey-body">Blogr is a free and open source application backed by a large community of helpful
+            developers. It supports
+            features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting
+            tools,
+            and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
+          </p>
+        </div>
+        <div class="laptop-2">
+          <h3 class="font-blue">Powerful tooling</h3>
+          <p class="font-grey-body">Batteries included. We built a simple and straightforward CLI tool that makes
+            customization and deployment a
+            breeze,but capable of producing even the most complicated sites.
+          </p>
+        </div>
       </div>
     </div>
   </main>
